# storytime

./: .env.example  .gitignore  CLAUDE.md  README.md  TODO.md  app.py  character_generator.py  claude.md  color_generator.py  config.py  font_manager.py  image_generator.py  langgraph.json  logger.py  package.json  pdf_builder.py  pyproject.toml  pytest.ini  story_processor.py  storytime.db  text_personalizer.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: agent.py  main.py  page.tsx  settings.py
app/ai/: base.py  character_generator.py  character_image_generator.py  color_generator.py  image_generator.py  story_processor.py  text_personalizer.py  text_processor.py
app/database/: models.py  session_manager.py
app/pages/: 1_story_generator.py  2_character_creator.py
app/pdf/: font_manager.py  pdf_builder.py
app/story_templates/: trying_new_foods.json
app/tools/: base.py  illustrator.py  narrator.py  seed.py  storage.py
app/ui/: __init__.py
app/utils/: download_manager.py  logger.py  schemas.py  settings.py  temp_file.py  utils.py
pages/: 1_Story_Generator.py  2_Character_Creator.py
src/: app.py  config.py  file_store.py  graph.py  settings.py
src/agents/: conversation_agent.py
src/ai/: agent.py
src/core/: logger.py  session.py  settings.py  temp_files.py  workflow_state.py
src/nodes/: challenge_discovery.py  narrator.py  seed_image.py  temp_file_handler.py  utils.py
src/prompts/: challenge_discovery.txt  narrator.txt  seed_image.txt
src/schemas/: __init__.py  approval.py  book.py  challenge.py  common.py  image.py  seed_image.py  state.py  ui.py  workflow.py
src/tools/: __init__.py  images.py  (+1 more)
story_templates/: airplane_adventure.json
storytime_agent/: config.py  graph.py  state.py
tests/: conftest.py  test_download_manager.py  test_schemas.py  test_settings.py  test_utils.py
(+25 files in other folders)
