[project]
name = "storytime"
version = "1.0.0"
description = "Simplified AI-powered children's book generator using simpleaichat"
readme = "README_SIMPLE.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "pydantic-ai>=0.0.16",
    "pillow>=10.4",
    "ollama>=0.3.0",
    "openai>=1.40.0",
    "structlog>=25.4.0",
    "streamlit>=1.50.0",
]

[project.scripts]
storytime = "storytime_simple:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
