[project]
name = "storytime"
version = "1.0.0"
description = "LangChain chatbot with image, conversation, and dice tools"
readme = "README_SIMPLE.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "langchain[openai]>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "streamlit>=1.50.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "langgraph>=0.6.8",
]

[tool.ruff]
line-length = 120
