[project]
name = "storytime"
version = "2.0.0"
description = "LangGraph-based therapeutic children's book generator with pure workflow architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.0",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langgraph-cli[inmem]>=0.1.0",
    "langgraph-sdk>=0.1.0",
    "grpcio>=1.75.1",
]

[tool.ruff]
line-length = 120
